--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,32 @@
 * {
   box-sizing: border-box;
 }
+
+.container {
+	position: relative;
+
+}
+
+nav {
+   position: absolute;
+   right: 0;
+   width: 50%;
+   z-index: 2000;
+   border: 2px solid black;
+
+}
+
+nav ul li {
+   display: inline;
+   float: right;
+   width: 15%;
+   text-align: left;
+   text-decoration: none;
+   border: 2px solid red;
+
+}
+
+nav ul {
+	list-style: none;
+
+}
