--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,48 +1,79 @@
-<<<<<<< HEAD
 * {
   box-sizing: border-box;
 }
 
-.container {
-	position: relative;
-
-}
-
-nav {
-   position: absolute;
-   right: 0;
-   width: 50%;
-   z-index: 2000;
-   border: 2px solid black;
-
-}
-
-nav ul li {
-   display: inline;
-   float: right;
-   width: 15%;
-   text-align: left;
-   text-decoration: none;
-   border: 2px solid red;
-
-}
-
-nav ul {
-	list-style: none;
-
-}
-=======
- *
+/* *
  {
   font-family: arial;
  }
- 
+ */
 
+
+
+.logo {
+  position: absolute;
+  top: 50px;
+  left: 70px;
+}
+
+.logo-link {
+  font-family: 'Patrick Hand SC', cursive;
+  font-size: 44px;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #fcfd80;
+}
+
+.nav-button {
+  font-family: 'Montserrat', sans-serif;
+  color: #fcfd80;
+  font-style: normal;
+  font-size: 16px;
+  text-decoration: none;
+}
+
+nav {
+  position: absolute;
+  top: 70px;
+  right: 30px;
+  width: 55%;
+  z-index: 2000;
+}
+
+nav ul li {
+  display: inline;
+  float: right;
+  width: 15%;
+  text-align: left;
+  text-decoration: none;
+}
+
+nav ul {
+  list-style: none;
+
+}
+
+.tagline {
+  position: absolute;
+  left: 0; 
+  right: 0; 
+  margin-left: auto; 
+  margin-right: auto; 
+  width: 900px;
+  top: 300px;
+  font-family: 'Permanent Marker', cursive;
+  font-size: 80px;
+  color: white;
+
+}
+
+=======
  body
  {
  margin: 0;
  }
  
+
 .page
 {
   /*Do not change this value*/
@@ -61,7 +92,7 @@ nav ul {
  
 .page1
 {
-  background-color: rgb(46, 204, 113);
+  background-color: #000033;
 }
 
 .page2
@@ -88,5 +119,3 @@ nav ul {
 {
   background-color: red;
 }
- 
->>>>>>> fb62e3b60ea8c03a898ab62d79a2596a39247729
