--- a/styles/styles_work.css
+++ b/styles/styles_work.css
@@ -1,31 +1,65 @@
  * {
   font-family: arial;
 }
- 
- 
+
+/*Downloaded custom fonts*/
+@font-face {
+  font-family: 'Permanent Marker';
+  src: url('../font/PermanentMarker.ttf');
+}
+
+@font-face {
+  
+  font-family: 'Patrick Hand SC';
+  src: url('../font/PatrickHandSC-Regular.ttf');
+}
+/*Downloaded custom fonts*/
+
+/*Needed for the scrolling part*/
 .page {
-  /*Do not change this value*/
   min-height: 100%;
   width: 100%;
-  /*Do not change this value*/
 }
 
 .page1 {
-  background-color: rgb(1, 204, 113);
+  background-color: #5a5255;
   position: relative;
   z-index: -1;
 }
 
 .page2 {
-  background-color: rgb(41, 128, 185);
+  background-color: #559e83;
+}
+/*Needed for the scrolling part*/
+
+h1 {
+  position: absolute;
+  left: 0; 
+  right: 0; 
+  margin-left: auto; 
+  margin-right: auto; 
+  width: 1000px;
+  top: 150px;
+  font-family: 'Permanent Marker', cursive;
+  font-size: 40px;
+  color: white;
 }
 
-.content {
+#image-work {
+  position: absolute;
+  left: -200px; 
+  right: 0; 
+  margin-left: auto; 
+  margin-right: auto; 
+  width: 1000px;
+  top: 250px;
 
-  min-width: 100%;
+  border-radius: 5px;
 
+  /*Enlage an image to 120% of its orginal height and width*/
+  transform: scale(1.2, 1.2);
+  transform-origin: 0 0;
 }
-
 
 /*CSS for the bars*/
 .bar {
@@ -57,21 +91,138 @@
 }
 /*CSS for the bars*/
 
-#image-title-what {
-  height: 600px;
+
+
+/*Responive part*/
+@media screen and (max-width: 1280px) {
+  #image-work {
+    left: -170px; 
+    width: 800px;
+  }
 }
 
-#duck-image {
+@media screen and (max-width: 1024px) {
+  h1 {
+    width: 600px;
+    font-size: 36px;
+    top: 130px;
+  }
 
-  width: 1000px;
-  height: 400px;
-  background-image: url('../images/rubber-duck-debugging_2.jpg');
-  border-radius: 5px;
+  #image-work {
+    left: -120px; 
+    width: 600px;
+    top: 180px;
+  }
 
-  /*Enlage an image to 120% of its orginal height and width*/
-  transform: scale(1.2, 1.2);
-  transform-origin: 0 0;
+  #bar-left, #bar-right {
+    width: 40px;
+  }
 
-    margin-left: auto ;
-  margin-right: auto ;
+  #bar-bottom {
+    height: 40px;
+  }
 }
+
+@media screen and (max-width: 750px) {
+  h1 {
+    width: 500px;
+    font-size: 31px;
+    top: 110px;
+  }
+
+  #image-work {
+    left: -80px; 
+    width: 400px;
+    top: 150px;
+  }
+
+  #bar-left, #bar-right {
+    width: 30px;
+  }
+
+  #bar-bottom {
+    height: 30px;
+  }
+
+  .logo {
+    position: fixed;
+    top: 20px;
+    left: 70px;
+  }
+
+  nav {
+    top: 40px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  nav {
+    top: 80px;
+    right: 90px;
+    width: 100%;
+  }
+
+  h1 {
+    width: 100%;
+    font-size: 28px;
+    top: 110px;
+    text-align: center;
+  }
+
+  #image-work {
+    top: 190px; 
+    width: 100%;
+    left: 0; 
+    transform: scale(1.0, 1.0);
+  }
+
+  #bar-left, #bar-right {
+    display: none;
+  } 
+
+  #bar-bottom {
+    height: 50px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .logo {
+    width: 100%;
+    left: 5px;
+  }
+
+  .logo-link {
+    font-family: 'Patrick Hand SC', cursive;
+    font-size: 36px;
+  }
+
+  nav {
+    top: 70px;
+  }
+  .nav-button {
+    font-size: 14px;
+  }
+
+  h1 {
+    width: 100%;
+    font-size: 20px;
+    top: 110px;
+  }
+
+  #image-work {
+    top: 170px; 
+    width: 100%;
+    left: 0; 
+    transform: scale(1.0, 1.0);
+  }
+
+
+  #bar-left, #bar-right {
+    display: none;
+  } 
+
+  #bar-bottom {
+    height: 30px;
+  }
+}
+/*Responive part*/
