--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+html {
+  background-color: #faf9f4;
+}
+
 .bar {
   background-repeat:no-repeat;
   background-size:contain;
@@ -79,43 +83,27 @@ nav ul {
 
 .tagline {
   position: absolute;
-/*  left: 0; 
-  right: 0; 
-  margin-left: auto; 
-  margin-right: auto; */
-  width: 900px;
-  top: 300px;
+  width: 70%;
+  top: 40%;
   font-family: 'Permanent Marker', cursive;
   font-size: 60px;
   color: white;
-  -webkit-transition: color 0.4s ease;
-  -moz-transition: color 0.4s ease;
-  -o-transition: color 0.4s ease;
-  transition: color 0.4s ease;
 }
 
 .title1, .title2 {
   position: relative;
   margin: 0 auto;
-  width: 690px;
+  width: 60%;
   top: 150px;
   padding: 10px;
   font-family: 'Roboto', sans-serif;
   font-size: 30px; 
   text-align: center;
-}
-
-.title1 {
   background-color: #f2f2f2;
-  
 }
 
-.title1 h1 {
+.title1 h1, .title2 h1 {
   color: #354E59;
-}
-
-.title2 h1 {
-  color: #2F6B5F;
 }
 
 .quote1, .julia {
@@ -170,13 +158,16 @@ span {
   left: 200px;
 }
 
-
+.clear {
+  clear: both;
+}
 
 
 =======
  body
  {
  margin: 0;
+ background-color: #faf9f4;
  }
  
 
@@ -203,7 +194,7 @@ span {
 
 .page2
 {
-  background-color: #ffffff;
+  background-color: #faf9f4;
 }
 
 .page3
