responsiveness adjusted in about.html and event.html

--- a/styles/about.css
+++ b/styles/about.css
@@ -66,10 +66,9 @@ nav ul {
   right: 0; 
   margin-left: auto; 
   margin-right: auto; */
-  width: 900px;
-  top: 300px;
-  left: 30%;
-  right: 30%;
+  width: 70%;
+  top: 40%;
+  left: 25%;
   font-family: 'Permanent Marker', cursive;
   font-size: 60px;
   color: white;
